Bug#56922 SHOW ENGINE INNODB STATUS truncation limit is too strict and not instrumented

rb://459 approved by Jimmuy / Inaam